# Makao

./: .clang-format  CMakeLists.txt  notes.txt
cmake/: GTest.cmake
src/: CMakeLists.txt  main.cpp
src/Deck/: CMakeLists.txt  Card.hpp  Deck.cpp  Deck.hpp  IDeck.hpp
src/Game/: CMakeLists.txt  EventManager.hpp  Game.cpp  Game.hpp  GameBuilder.cpp  GameBuilder.hpp  IGame.hpp  InputManager.hpp  Renderer.hpp  Updater.hpp
src/GuiAdapter/: AdapterData.hpp  CMakeLists.txt  Entity.hpp  GuiAdapter.cpp  GuiAdapter.hpp  IGuiAdapter.hpp  SpriteManager.cpp  SpriteManager.hpp  TextureManager.hpp
src/Hello/: CMakeLists.txt  hello.cpp  hello.hpp
src/Helper/: CMakeLists.txt  Helper.hpp
src/Pile/: CMakeLists.txt  IPile.hpp  Pile.cpp  Pile.hpp
src/Player/: CMakeLists.txt  IPlayer.hpp  Player.cpp  Player.hpp
src/Randomizer/: CMakeLists.txt  IRandomizer.hpp  Randomizer.cpp  Randomizer.hpp
src/Visitor/: CMakeLists.txt  Node.hpp  Visitor.hpp
ut/: CMakeLists.txt
ut/Deck/: BasicDeckTests.cpp  CMakeLists.txt  DeckTests.cpp
ut/Deck/mock/: CMakeLists.txt
ut/Deck/mock/include/: DeckMock.hpp
ut/Game/: CMakeLists.txt  GameTests.cpp
ut/Game/mock/include/: EventManagerMock.hpp  InputManagerMock.hpp  RendererMock.hpp  UpdaterMock.hpp
ut/GuiAdapter/mock/include/: GuiAdapterMock.hpp
ut/Hello/: CMakeLists.txt  helloTests.cpp
ut/Pile/: CMakeLists.txt  PileTests.cpp
ut/Pile/mock/: CMakeLists.txt
ut/Pile/mock/include/: PileMock.hpp
ut/Player/: CMakeLists.txt  PlayerTests.cpp
ut/Player/mock/: CMakeLists.txt
ut/Player/mock/include/: PlayerMock.hpp
ut/Randomizer/: CMakeLists.txt  RandomizerTests.cpp
ut/Randomizer/mock/: CMakeLists.txt
ut/Randomizer/mock/include/: RandomizerMock.hpp
